--- a/wordle-bot-search/src/App.css
+++ b/wordle-bot-search/src/App.css
@@ -7,21 +7,20 @@
   pointer-events: none;
 }
 
+.App-header {
+  font-size: 18px;
+  padding: 1em
+}
+
+.Mobile-app-header {
+  font-size: 12px;
+  padding: 1em
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
